# drone-sim

./: .env.example  .gitignore  README.md  docker-compose.yml  netlify.toml  vercel.json
.github/workflows/: deploy.yml
engine/: CMakeLists.txt  Dockerfile  build_wasm.sh
engine/src/: CommandChannel.cpp  CommandChannel.h  DroneConfig.h  DroneState.h  Logger.cpp  Logger.h  PhysicsEngine.cpp  PhysicsEngine.h  RK4Integrator.cpp  RK4Integrator.h  Rotor.cpp  Rotor.h  SharedMemory.cpp  SharedMemory.h  Simulation.cpp  Simulation.h  TcpServer.cpp  TcpServer.h  WorldCollision.cpp  WorldCollision.h  main.cpp  wasm_api.cpp
engine/tests/: test_collision.cpp  test_flight.cpp
frontend/: .env.development  .env.wasm  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: DroneSelector.tsx  FaultInjection.tsx  FlightControls.tsx  Minimap.tsx  MissionPlanner.tsx  Scene3D.tsx  TelemetryHUD.tsx  UrbanEnvironment.tsx
frontend/src/hooks/: useAudioEngine.ts  useFlightControls.ts  useTelemetry.ts
frontend/src/sim/: RemoteClient.ts  SimClient.ts  WasmClient.ts  engine-module.d.ts  index.ts  profiles.ts
frontend/src/types/: drone.ts  mission.ts
frontend/src/ui/: theme.ts
planner/: .dockerignore  Dockerfile  command_channel.py  drone_profiles.py  main.py  requirements.txt  shared_memory.py  tcp_client.py
planner/api/: server.py
planner/database/: db.py
planner/models/: drone_state.py
planner/planner/: astar.py  base_planner.py  rrt_star.py
planner/tests/: test_astar.py  test_rrt_star.py
(+5 files in other folders)
